[gd_scene load_steps=10 format=3 uid="uid://w5a4rvtlvgu1"]

[ext_resource type="Script" path="res://Objects/HitboxComponent/hitbox_component.gd" id="1_omgio"]
[ext_resource type="Script" path="res://Character/Enemies/Boss1/Boss1.gd" id="1_wkujg"]
[ext_resource type="Script" path="res://Objects/Health/HealthComponent.gd" id="2_iy34u"]
[ext_resource type="PackedScene" uid="uid://dwjj5yilojq1p" path="res://Character/Enemies/Projectiles/Projectile1.tscn" id="2_ynysb"]
[ext_resource type="Script" path="res://Character/Enemies/Boss1/Boss1StateMachine.gd" id="3_5wm64"]
[ext_resource type="Script" path="res://Character/Enemies/Boss1/Boss1Shoot.gd" id="5_5kjvm"]
[ext_resource type="Script" path="res://Character/Enemies/Boss1/BossWait.gd" id="7_p2reo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0uke"]
size = Vector2(64, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs78g"]
size = Vector2(68, 132)

[node name="Boss1" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_wkujg")
projectile = ExtResource("2_ynysb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 128.0
color = Color(1, 1, 0.109804, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 64)
shape = SubResource("RectangleShape2D_s0uke")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_omgio")
health_component = NodePath("../HealthComponent")
hitbox_category = "boss_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(32, 64)
shape = SubResource("RectangleShape2D_fs78g")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_iy34u")
MAX_HEALTH = 200.0

[node name="Boss1StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_5wm64")
inital_state = NodePath("Boss1Shoot")

[node name="Boss1Shoot" type="Node" parent="Boss1StateMachine" node_paths=PackedStringArray("boss")]
script = ExtResource("5_5kjvm")
boss = NodePath("../..")

[node name="Boss1Wait" type="Node" parent="Boss1StateMachine"]
script = ExtResource("7_p2reo")
